styles/global.css
@tailwind base;

@tailwind components;

@tailwind utilities;

html,
body,
* {
  padding: 0;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  box-sizing: border-box;
}
::-webkit-scrollbar {
  width: 0px;
}

a {
  color: inherit;
  text-decoration: none;
}

.main-container {
  --max-width: 80rem;
  --padding: 0.3rem;

  margin-inline: auto;
  width: min(var(--max-width), 100% - var(--padding) * 2);
}

.button {
  border-radius: 1rem;
  padding: 0.7rem 1.5rem;
  border: none;
  font-size: 1rem;
  font-weight: 500;
  cursor: pointer;

  transition: all 0.2s ease-in-out;
}

.button:hover {
  scale: 1.05;
  transform: translateY(-4px);
}

.button.white {
  background-color: white;
  color: red;
}

.button.red {
  background-color: red;
  color: white;
}

.layout {
  padding: 0.625rem;
}

.marquee-text {
  font-size: 29px;
  font-weight: 600;
  margin: 60px 0px;
  color: #f02d34;
}
.marquee {
  position: relative;
  height: 400px;
  width: 100%;
  overflow-x: hidden;
}

.track {
  position: absolute;
  white-space: nowrap;
  will-change: transform;
  animation: marquee 15s linear infinite;
  width: 160%;
}
.track:hover {
  animation-play-state: paused;
}
@keyframes marquee {
  from {
    transform: translateX(0);
  }
  to {
    transform: translateX(-50%);
  }
}

span.text-red {
  -webkit-text-stroke: 1px #f02d34;
  margin-left: 6px;
}
.logo {
  color: gray;
  font-size: 18px;
}
.cart-icon {
  font-size: 25px;
  cursor: pointer;
  position: relative;
  border: none;
  background-color: transparent;
}
.cart-icon:hover {
  transform: scale(1.1, 1.1);
}
.cart-item-qty {
  position: absolute;
  top: 0;
  font-size: 12px;
  color: #eee;
  background-color: #f02d34;
  width: 18px;
  height: 18px;
  border-radius: 50%;
  text-align: center;
  font-weight: 600;
}
.products-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 15px;
  margin-top: 20px;
  width: 100%;
}
.product-card {
  cursor: pointer;
  transform: scale(1, 1);
  transition: transform 0.5s ease;
  color: #324d67;
}
.product-card:hover {
  transform: scale(1.1, 1.1);
}

.product-image {
  border-radius: 15px;
  background-color: #ebebeb;
  transform: scale(1, 1);
}

.product-image:hover {
  background-color: #f02d34;
  transition: 0.3s ease-in-out;
}

.product-name {
  font-weight: 500;
}
.product-price {
  font-weight: 800;
  margin-top: 6px;
  color: black;
}

.hero-banner-container {
  padding: 100px 40px;
  background-color: #dcdcdc;
  border-radius: 15px;
  position: relative;
  height: 500px;
  line-height: 0.9;
  width: 100%;
}
.hero-banner-container .beats-solo {
  font-size: 20px;
}

.hero-banner-container h3 {
  font-size: 4rem;
  margin-top: 4px;
}
.hero-banner-container h1 {
  color: white;
  font-size: 10em;
  margin-left: -20px;
  text-transform: uppercase;
}
.hero-banner-image {
  position: absolute;
  top: 0%;
  right: 20%;
  width: 450px;
  height: 450px;
}

.desc {
  position: absolute;
  right: 10%;
  bottom: 5%;
  width: 300px;
  line-height: 1.3;
  display: flex;
  flex-direction: column;
  color: #324d67;
}
.desc p {
  color: #5f5f5f;
  font-weight: 100;
  text-align: end;
}
.desc h5 {
  margin-bottom: 12px;
  font-weight: 700;
  font-size: 16px;
  /* color: black; */
  align-self: flex-end;
}
.products-heading {
  text-align: center;
  margin: 40px 0px;
  color: #324d67;
}
.products-heading h2 {
  font-size: 40px;
  font-weight: 800;
}
.footer-banner-container {
  background-color: #f02d34;
  border-radius: 15px;
  position: relative;
  line-height: 1;
  color: white;
  width: 100%;
}

/* .banner-desc button {
  border-radius: 15px;
  padding: 10px 16px;
  background-color: white;
  color: red;
  border: none;
  margin-top: 40px;
  font-size: 18px;
  font-weight: 500;
  cursor: pointer;
} */

.banner-desc .left h3 {
  font-weight: 900;
  font-size: 80px;
  margin-left: 25px;
}
.banner-desc .left p {
  margin: 18px;
}
.banner-desc .right {
  line-height: 1.4;
}

.banner-desc .right p {
  font-size: 18px;
}
.banner-desc .right .company-desc {
  font-size: 14px;
  font-weight: 300;
}
.cart-wrapper {
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.6);
  backdrop-filter: blur(2px);
  position: fixed;
  right: 0;
  top: 0;
  z-index: 100;
  /* will-change: transform; */
  /* transition: all 1s ease-in-out; */
}

.footer-container {
  color: #324d67;
  text-align: center;
  margin-top: 20px;
  padding: 30px 10px;
  font-weight: 700;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 10px;
  justify-content: center;
}
.empty-cart {
  margin: 40px;
  text-align: center;
}
.empty-cart h3 {
  font-weight: 600;
  font-size: 20px;
}
.cancel {
  cursor: pointer;
}
.product-container {
  margin-top: 15px;
  overflow: auto;
  max-height: 70vh;
  padding: 20px 10px;
}
.product {
  display: flex;
  gap: 30px;
  padding: 20px;
}
.product .cart-product-image {
  width: 180px;
  height: 150px;
  border-radius: 15px;
  background-color: #ebebeb;
}
.item-desc .flex {
  display: flex;
  justify-content: space-between;
  width: 350px;
  color: rgb(50, 77, 103);
}
.flex h5 {
  font-size: 24px;
}
.flex h4 {
  font-size: 20px;
}
.total {
  display: flex;
  justify-content: space-between;
}
.total h3 {
  font-size: 22px;
}
.remove-item {
  font-size: 24px;
  color: #f02d34;
  cursor: pointer;
  background: transparent;
  border: none;
}
.cart-bottom {
  position: absolute;
  bottom: 12px;
  right: 5px;
  width: 100%;
  padding: 30px 65px;
}

.btn-container {
  width: 400px;
  margin: auto;
}
.btn {
  width: 100%;
  max-width: 400px;
  padding: 10px 12px;
  border-radius: 15px;
  border: none;
  font-size: 20px;
  margin-top: 10px;
  margin-top: 40px;
  text-transform: uppercase;
  background-color: #f02d34;
  color: #fff;
  cursor: pointer;
  transform: scale(1, 1);
  transition: transform 0.5s ease;
}
.btn:hover {
  transform: scale(1.1, 1.1);
}
.product-detail-container {
  display: flex;
  gap: 40px;
  margin: 40px;
  margin-top: 60px;
  color: #324d67;
}

.product-detail-image {
  border-radius: 15px;
  background-color: #ebebeb;

  width: 100%;
  height: 100%;

  cursor: pointer;
  transition: 0.3s ease-in-out;
}
.product-detail-image:hover {
  background-color: #f02d34;
}

.small-images-container {
  display: flex;
  gap: 10px;
  margin-top: 20px;
}
.small-image {
  border-radius: 8px;
  background-color: #ebebeb;
  width: 70px;
  height: 70px;
  cursor: pointer;
}

.selected-image {
  background-color: #f02d34;
}
.reviews {
  color: #f02d34;
  margin-top: 10px;
  display: flex;
  gap: 5px;
  align-items: center;
}

.product-detail-desc h4 {
  margin-top: 10px;
}
.product-detail-desc p {
  margin-top: 10px;
}
.reviews p {
  color: #324d67;
  margin-top: 0px;
}
.product-detail-desc .price {
  font-weight: 700;
  font-size: 26px;
  margin-top: 30px;
  color: #f02d34;
}
.price .old-price,
.product-price .old-price,
.price .old-price {
  color: gray;
  text-decoration: line-through;
}
.product-detail-desc .quantity {
  display: flex;
  gap: 20px;
  margin-top: 10px;
  align-items: center;
}
.product-detail-desc .buttons {
  display: flex;
  gap: 30px;
}
.buttons .add-to-cart {
  padding: 10px 20px;
  border: 1px solid #f02d34;
  margin-top: 40px;
  font-size: 18px;
  font-weight: 500;
  background-color: white;
  color: #f02d34;
  cursor: pointer;
  width: 200px;
  transform: scale(1, 1);
  transition: transform 0.5s ease;
}
.buttons .add-to-cart:hover {
  transform: scale(1.1, 1.1);
}
.buttons .buy-now {
  width: 200px;

  padding: 10px 20px;
  background-color: #f02d34;
  color: white;
  border: none;
  margin-top: 40px;
  font-size: 18px;
  font-weight: 500;
  cursor: pointer;
  transform: scale(1, 1);
  transition: transform 0.5s ease;
}
.buttons .buy-now:hover {
  transform: scale(1.1, 1.1);
}

.maylike-products-wrapper {
  margin-top: 120px;
}
.maylike-products-wrapper h2 {
  text-align: center;
  margin: 50px;
  color: #324d67;

  font-size: 28px;
}
.maylike-products-container {
  display: flex;
  justify-content: center;
  gap: 15px;
  margin-top: 20px;
}
.max-qty {
  font-weight: 500;
  color: #f02d34;
}
.success-wrapper,
.cancel-wrapper {
  background-color: white;
  min-height: 60vh;
}
.success,
.cancel {
  width: 1000px;
  margin: auto;
  margin-top: 160px;
  background-color: #dcdcdc;
  padding: 50px;
  border-radius: 15px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.success .icon {
  color: green;
  font-size: 40px;
}
.success h2 {
  text-transform: capitalize;
  margin-top: 15px 0px;
  font-weight: 900;
  font-size: 40px;
  color: #324d67;
}
.success .email-msg {
  font-size: 16px;
  font-weight: 600;
  text-align: center;
}
.cancel p {
  font-size: 20px;
  font-weight: 600;
}
.success .description {
  font-size: 16px;
  font-weight: 600;
  text-align: center;
  margin: 10px;
  margin-top: 30px;
}
.success .description .email {
  margin-left: 5px;
  color: #f02d34;
}
.product-max-qty {
  margin-top: 10px;
}

@media screen and (max-width: 800px) {
  .hero-banner-container {
    height: 560px;
  }
  .hero-banner-image {
    width: 77%;
    height: 62%;
    top: -2%;
    right: -6%;
  }

  .banner-desc {
    display: grid;
    grid-template-columns: 1fr 1fr;
  }

  .banner-desc .right {
    grid-column: span 2;
  }
  .hero-banner-container {
    line-height: 1.3;
  }
  .hero-banner-container h1 {
    font-size: 50px;
  }
  .hero-banner-container h3 {
    font-size: 40px;
  }
  .hero-banner-container button {
    margin-top: 90px;
  }
  .desc {
    bottom: 60px;
  }
  .product-detail-container {
    flex-wrap: wrap;
  }
  .cart-container {
    /* width: 415px; */
    padding: 4px;
  }
  .product-container {
    margin-top: 10px;
  }
  .product {
    padding: 20px 5px;
  }
  .product .cart-product-image {
    width: 25%;
    height: 25%;
  }
  .buttons .add-to-cart {
    width: 150px;
  }
  .buttons .buy-now {
    width: 150px;
  }
  .product-detail-container {
    margin: 20px;
  }

  .item-desc .flex {
    width: 200px;
  }
  .top {
    flex-wrap: wrap;
    gap: 10px;
  }
  .flex h5 {
    font-size: 16px;
    color: #324d67;
  }
  .flex h4 {
    font-size: 16px;
    color: black;
  }
  .cart-bottom {
    padding: 30px;
  }

  .total h3 {
    font-size: 20px;
  }
  .track {
    animation: marquee 10s linear infinite;
    width: 150%;
  }
  .success-wrapper,
  .cancel-wrapper {
    min-height: 69vh;
  }
  .success,
  .cancel {
    width: 370px;
    margin-top: 100px;
    padding: 20px;
  }
  .success {
    height: 350px;
  }
  .success h2 {
    font-size: 17px;
  }
  .btn-container {
    width: 300px;
    margin: auto;
  }
}

@media screen and (max-width: 600px) {
  .banner-desc {
    display: flex;
    flex-direction: column;
  }

  .banner-desc .left {
    padding-bottom: 0;
  }
  .banner-desc .right {
    padding-top: 0;
  }

  .banner-desc .left h3 {
    display: inline-block;
  }
}

